--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
   --secondary-bg: rgb(215, 215, 215);
   --primary-shadow: rgb(135, 135, 135);
   --primary-shadow-transparent: rgb(135, 135, 135, 0.6);
-  --primary-text: black;
+  --primary-text: rgb(228, 228, 228);
   --secondary-text: rgb(55, 55, 55);
   --primary-border: rgb(200, 200, 200);
   --invert: invert(1);
